--- a/a2/index.html
+++ b/a2/index.html
@@ -6,9 +6,78 @@
 
           <title>Assignment a2: </title>  
 
+          <meta charset="utf-8">
+          <meta author="Musgrove">
+          <meta Description="Fake superhero resume">
+
      </head>
 
      <body>
+
+     	
+     	<h1>By M'Lynn Musgrove</h1>
+		<!-- I wasnt sure if you meant I needed to put my name or my super hero's name here so I kind of put both! This is my comment -->
+     	<hr> 
+
+     	<h1> <i> <mark>Violet Parr (of The Incredibles)</mark></i></h1>
+     	<address>4530 Super Hero Lane, 111-222-3333</address>
+
+
+
+     	<img src="images/violet.jpg">
+
+     	<p>The eldest child of Bob and Helen Parr (Mr. Incredible and Elastigirl), Violet was born with the superhuman ability to render herself invisible, as well as generate force fields. Violet is a shy high school student who longs to fit in among her peers, a task she believes is hindered by her superpowers. Despite this, Violet has gradually matured and become more confident in herself as both a young woman and superhero.</p>
+
+
+     	<hr>
+
+     	<h2>Work Experience</h2>
+
+     	<table border="1">
+		<tr>
+			<th>Job</th>
+			<th>Year</th>
+	
+		</tr>
+		<tr>
+			<td>Actress in Incredibles 1</td>
+			<td>2004	</td>
+		
+		</tr>
+		<tr>
+			<td>Actress in Incredibles 2</td>
+			<td>2018	</td>
+		
+		</tr>
+
+	</table>
+
+	<hr>
+
+	<h2>Hobbies and Interests</h2>
+
+	<ul>
+		<li>Creating Forcfields</li>
+		<li>Babysitting JackJack</li>
+		<li> <i>Disspearing into the void</i>  </li>
+		<li>Being an angsty teenager</li>
+	</ul>
+
+	<hr>
+
+	<h2>Other Info</h2>
+	<a href="https://en.wikipedia.org/wiki/Violet_Parr#Powers_and_abilities">Check Out Violet's Wiki Page</a>
+
+	<br>
+
+	<a href="https://www.youtube.com/watch?v=_of4wBbijwM">Check out a Previous Interview from Violet</a>
+
+
+
+
+
+
+
 
      </body>
 
