--- a/a2/index.html
+++ b/a2/index.html
@@ -10,28 +10,48 @@
           <meta author="Musgrove">
           <meta Description="Fake superhero resume">
 
+		  <link rel="reset" type="text/css" href="assets/CSS/reset.css">
+          <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
+          <link href="https://fonts.googleapis.com/css?family=Anton|Lobster&display=swap" rel="stylesheet">
+          <link href="https://fonts.googleapis.com/css?family=Anton|Kanit|Lobster&display=swap" rel="stylesheet">
+
      </head>
 
      <body>
 
-     	
+     	<div id="title" class="font1">
      	<h1>By M'Lynn Musgrove</h1>
 		<!-- I wasnt sure if you meant I needed to put my name or my super hero's name here so I kind of put both! This is my comment -->
+
+		</div>
      	<hr> 
+
+     	<div id="realtitle" class="curve">
 
      	<h1> <i> <mark>Violet Parr (of The Incredibles)</mark></i></h1>
      	<address>4530 Super Hero Lane, 111-222-3333</address>
+
+     	</div>
+
 
 
 
      	<img src="images/violet.jpg">
 
-     	<p>The eldest child of Bob and Helen Parr (Mr. Incredible and Elastigirl), Violet was born with the superhuman ability to render herself invisible, as well as generate force fields. Violet is a shy high school student who longs to fit in among her peers, a task she believes is hindered by her superpowers. Despite this, Violet has gradually matured and become more confident in herself as both a young woman and superhero.</p>
+     	<div id="words">
 
+     	<p class="font2">The eldest child of Bob and Helen Parr (Mr. Incredible and Elastigirl), Violet was born with the superhuman ability to render herself invisible, as well as generate force fields. Violet is a shy high school student who longs to fit in among her peers, a task she believes is hindered by her superpowers. Despite this, Violet has gradually matured and become more confident in herself as both a young woman and superhero.</p>
+
+   
+		<div>
 
      	<hr>
 
-     	<h2>Work Experience</h2>
+     	
+
+     	</div id="work">
+
+     	<h2 class="font1 font3">Work Experience</h2>
 
      	<table border="1">
 		<tr>
@@ -52,9 +72,13 @@
 
 	</table>
 
+	</div>
+
 	<hr>
 
-	<h2>Hobbies and Interests</h2>
+	<div id="hobbies">
+
+	<h2 class="font1 font3">Hobbies and Interests</h2>
 
 	<ul>
 		<li>Creating Forcfields</li>
@@ -63,14 +87,20 @@
 		<li>Being an angsty teenager</li>
 	</ul>
 
+
+
 	<hr>
 
-	<h2>Other Info</h2>
-	<a href="https://en.wikipedia.org/wiki/Violet_Parr#Powers_and_abilities">Check Out Violet's Wiki Page</a>
+	</div>
 
-	<br>
+	<div id="Other">
+
+	<h2 class="font1">Other Info</h2>
+	<a href="https://en.wikipedia.org/wiki/Violet_Parr#Powers_and_abilities">Check Out Violet's Wiki Page and</a>
 
 	<a href="https://www.youtube.com/watch?v=_of4wBbijwM">Check out a Previous Interview from Violet</a>
+
+	</div>
 
 
 
