--- a/a5/index.html
+++ b/a5/index.html
@@ -4,11 +4,56 @@
 
      <head>
 
-          <title>Assignment a4: </title>  
+     	  <meta charset="utf-8">
+
+     	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+     	  <link rel="stylesheet" type="text/css" href="assets/style.css">
+
+          <title>Assignment a5: </title>  
 
      </head>
 
      <body>
+
+     	<h1>How To Write A Song</h1>
+
+     	<div class="steptitle">
+     		<p>Find Inspiration</p>
+     		<img src="assets/photos/inspo.jpg" 400px 200px>
+
+     	</div>
+
+     	<div class="steptitle">
+     		<p>Make A Chord Progression</p>
+     		<iframe width="420" height="315"
+			src="https://www.youtube.com/watch?v=M8eItITv8QA&pbjreload=10">
+			</iframe>
+     	</div>
+
+     	<div class="steptitle">
+     		<p>Write a Hook</p>
+     	</div>
+
+     	<div class="steptitle">
+     		<p>Tell A Story</p>
+     	</div>
+
+     	<div class="steptitle">
+     		<p>Polish and Rewrite</p>
+     	</div>
+
+
+
+     	<script type="text/javascript" src="script.js">
+
+     		$("p").hover(function(){
+  			$(this).css("background-color", "blue");
+  			}, function(){
+  			$(this).css("background-color", "pink");
+			});
+
+     	</script>
 
      </body>
 
